# koru

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yaml  sqlx-data.json
config/: default.yml  integration.yml  local.yml  prod.yml
migrations/: 20220328131953_create_user_table.sql  20220823020834_create_group_table.sql  20220824085346_create_group_members_table.sql  20220826004218_foreign_keys.sql  20220830065510_create_expense_table.sql  20220901021422_create_settlement_tables.sql  20220905070431_settled_status_in_expense_table.sql  20220915015646_settlement_expenses_table.sql  20220926020444_members_unique_index.sql  20220928045611_settlement_start_date.sql  20221206073442_member_color_and_date.sql  20221212043906_event_table.sql  20221214081624_device_table.sql  20230110054650_credentials.sql  20230223084407_roles.sql  20230310050355_create_roles.sql
openapi/: koru_openapi.json  openapi.rs
scripts/: init_db.sh  stop_db.sh
scripts/git-hooks/: commit-msg  git-hooks.sh  pre-commit
src/: lib.rs  main.rs
src/api/: mod.rs  response.rs
src/api/routes/: change_member_color.rs  create_expense.rs  create_group.rs  delete_expense.rs  delete_group.rs  generate_group_token.rs  get_all_groups.rs  get_all_users.rs  get_expenses.rs  get_group.rs  get_groups.rs  get_settlements.rs  health_check.rs  join_group.rs  login.rs  logout.rs  mod.rs  register.rs  register_device.rs  remove_device.rs  settle.rs  update_expense.rs
src/application/: app.rs  event_bus.rs  mod.rs  store.rs
src/application/admin/: admin_usecase.rs  mod.rs
src/application/auth/: auth_service.rs  credential_repository.rs  credentials_hasher.rs  mod.rs  user_credentials.rs  user_password.rs
src/application/group/: change_member_color.rs  create_expense.rs  create_group.rs  delete_expense.rs  delete_group.rs  generate_token.rs  get_expenses.rs  get_group.rs  get_groups.rs  get_settlements.rs  (+5 more)
src/configuration/: application.rs  event_bus.rs  mod.rs  notification.rs  store.rs
src/domain/: errors.rs  mod.rs
src/infrastructure/: mod.rs
src/utils/: date.rs  errors.rs  mod.rs  telemetry.rs
src/worker/: mod.rs
tests/api/: change_member_color.rs  create_expense.rs  create_group.rs  delete_expense.rs  delete_group.rs  generate_group_token.rs  get_all_groups.rs  get_all_users.rs  get_expenses.rs  get_groups.rs  get_settlements.rs  health_check.rs  join_group.rs  login.rs  logout.rs  main.rs  mem_test_db.rs  pg_test_db.rs  register.rs  register_device.rs  remove_device.rs  settle.rs  test_app.rs  update_expense.rs
tests/worker/: external_test_app.rs  main.rs  memory_test_app.rs  notifications.rs  test_app.rs
(+67 files in other folders)
